--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,5 @@
 @import "reset";
 @import "config/variable";
-@import "messages"
+@import "font-awesome-sprockets";
+@import "font-awesome";
+@import "messages";
