--- a/app/assets/stylesheets/modules/_mainRight.scss
+++ b/app/assets/stylesheets/modules/_mainRight.scss
@@ -2,5 +2,37 @@
   background-color: rgb(255, 255, 196);
   height: calc(100vh - 50px);
   width: calc(100vw - 50vw);
-  margin-top: 50px;
+  margin-top: 150px;
+
+  .formBox{
+    background-color: rgb(227, 227, 227);
+    width: 80%;
+    margin: 0 auto;
+    box-shadow: 3px 3px 3px 3px rgba($color: #5a5a5a, $alpha: 1.0);
+
+    &__form{
+      width: 100%;
+
+      &__text{
+        height: 60px;
+        width: 80%;
+        margin: 5px 10%;
+        resize: none;
+      }
+
+      &__image{
+        margin-left: 10%;
+        cursor: pointer;
+        &--icon{
+          display: none;
+        }
+      }
+
+      &__btn{
+        float: right;
+        margin-right: 10%;
+        cursor: pointer;
+      }
+    }
+  }
 }
