--- a/app/views/messages/_mainRight.html.haml
+++ b/app/views/messages/_mainRight.html.haml
@@ -1,8 +1,7 @@
 .rightBox
   .formBox
     %form.formBox__form
-      %textarea{placeholder: "140字以内", class: "formBox__form__text"}
-      -# .formBox__form__comand
+      %textarea{placeholder: "どんな感じだった？", class: "formBox__form__text"}
       %label{class: "formBox__form__image"}
         %i.fas.fa-image
         %input{type: "file", class: "formBox__form__image--icon"}
