devise-message_update-create

--- a/app/assets/stylesheets/modules/_mainRight.scss
+++ b/app/assets/stylesheets/modules/_mainRight.scss
@@ -2,7 +2,7 @@
   background-color: rgb(255, 255, 196);
   height: calc(100vh - 50px);
   width: calc(100vw - 50vw);
-  margin-top: 150px;
+  padding-top: 150px;
 
   .formBox{
     background-color: rgb(227, 227, 227);
