--- a/app/views/messages/_mainLeft.html.haml
+++ b/app/views/messages/_mainLeft.html.haml
@@ -1,20 +1,27 @@
 .leftBox
-  .prefecture
-    .hokkaidos
-      = link_to "北海道", prefectures_hokkaidos_path
-    .tohokus
-      = link_to "東北", prefectures_tohokus_path
-    .kantos
-      = link_to "関東", prefectures_kantos_path
-    .chubus
-      = link_to "中部", prefectures_chubus_index_path
-    .kinkis
-      = link_to "近畿", prefectures_kinkis_path
-    .chugokus
-      = link_to "中国", prefectures_chugokus_path
-    .shikokus
-      = link_to "四国", prefectures_shikokus_path
-    .kyushus
-      = link_to "九州", prefectures_kyushus_path
-    .okinawas
-      = link_to "沖縄", prefectures_okinawas_path
+  .leftContents
+    .prefecturesBox
+      .prefectures
+        .hokkaidos
+          = link_to "北海道", prefectures_hokkaidos_path
+        .tohokus
+          = link_to "東北", prefectures_tohokus_path
+        .kantos
+          = link_to "関東", prefectures_kantos_path
+        .chubus
+          = link_to "中部", prefectures_chubus_index_path
+        .kinkis
+          = link_to "近畿", prefectures_kinkis_path
+        .chugokus
+          = link_to "中国", prefectures_chugokus_path
+        .shikokus
+          = link_to "四国", prefectures_shikokus_path
+        .kyushus
+          = link_to "九州", prefectures_kyushus_path
+        .okinawas
+          = link_to "沖縄", prefectures_okinawas_path
+
+    %form.leftContents__form
+      .leftContents__form__box
+        %input{type: "text", placeholder: "地名を入力してください", class: "text"}
+        %input{type: "submit", value: "検索", class: "btn"}
