moving-test_create

--- a/app/views/messages/_header.html.haml
+++ b/app/views/messages/_header.html.haml
@@ -10,5 +10,7 @@
         %li
           = link_to "マイページ", "/users/#{current_user.id}"
           = link_to "ログアウト", destroy_user_session_path, method: :delete
-
   .drag-and-drop{ id: "yellow-box"}
+    文字を認識するか
+
+
