--- a/app/views/messages/_header.html.haml
+++ b/app/views/messages/_header.html.haml
@@ -10,6 +10,12 @@
         %li
           = link_to "マイページ", "/users/#{current_user.id}"
           = link_to "ログアウト", destroy_user_session_path, method: :delete
+    - else
+      .userNickname
+      %ul.userFormBtn
+        %li
+          = link_to "ログイン", new_user_session_path
+          = link_to "新規登録", new_user_registration_path
 
 
 
