--- a/app/views/messages/_header.html.haml
+++ b/app/views/messages/_header.html.haml
@@ -1,7 +1,7 @@
 .header
   .siteName
     %a(href="/messages#index")
-      travel（仮）
+      Travel-memo
   .userBox
     - if user_signed_in?
       .userNickname
