--- a/app/views/prefectures/hokkaidos/index.html.haml
+++ b/app/views/prefectures/hokkaidos/index.html.haml
@@ -1,5 +1,7 @@
-.hokkaido
-  %a(href="#")
-    .hokkaidoBtn
-      %textarea
-      %input(type="submit" value="送信")
+= render "./messages/header"
+= render "./layouts/prefecture"
+-# .hokkaido
+-#   %a(href="#")
+-#     .hokkaidoBtn
+-#       %textarea
+-#       %input(type="submit" value="送信")
