--- a/app/assets/stylesheets/modules/_mainLeft.scss
+++ b/app/assets/stylesheets/modules/_mainLeft.scss
@@ -11,7 +11,7 @@
       background-color: rgb(151, 236, 255);
       height: 40vw;
       width: 40vw;
-      box-shadow: 2px 2px 2px 2px rgb(27, 78, 53);
+      border: inset 5px rgb(119, 255, 180);
       display: flex;
       justify-content: center;
       align-items: center;
