--- a/app/assets/stylesheets/modules/_mainRight.scss
+++ b/app/assets/stylesheets/modules/_mainRight.scss
@@ -1,7 +1,7 @@
 .rightBox{
-  background-color: rgb(255, 255, 196);
+  // background-color: rgb(255, 255, 196);
   height: calc(100vh - 50px);
-  width: calc(100vw - 50vw);
+  width: 50vw;
   padding-top: 150px;
 
   .formBox{
