message_userNicknameSearch_create

--- a/app/assets/stylesheets/modules/_mainLeft.scss
+++ b/app/assets/stylesheets/modules/_mainLeft.scss
@@ -76,19 +76,42 @@
         }
       }
     }
-    &__form{
-      background-color: rgb(255, 255, 255);
-      height: 30px;
-      line-height: 30px;
-      float: right;
-      margin-top: 10px;
-      box-shadow: 3px 3px 3px 3px rgba($color: #5a5a5a, $alpha: 1.0);
+    .placeName{
+      &__search{
+        background-color: rgb(255, 255, 255);
+        height: 30px;
+        line-height: 30px;
+        float: right;
+        margin-top: 10px;
+        border: solid 1px rgb(180, 180, 180);
+        // box-shadow: 3px 3px 3px 3px rgba($color: #5a5a5a, $alpha: 1.0);
 
-      &__box{
-        padding: 0 10px;
-        .text{
+        &__box{
+          padding: 0 10px;
+          .text{
+          }
+          .btn{
+          }
         }
-        .btn{
+      }
+    }
+    .userNickname{
+      &__search{
+        background-color: rgb(255, 255, 255);
+        height: 30px;
+        line-height: 30px;
+        float: right;
+        margin-top: 10px;
+        border: solid 1px rgb(180, 180, 180);
+
+        &__box{
+          padding: 0 10px;
+          .text{
+
+          }
+          .btn{
+            
+          }
         }
       }
     }
