--- a/app/views/messages/_mainLeft.html.haml
+++ b/app/views/messages/_mainLeft.html.haml
@@ -21,7 +21,14 @@
         .okinawas
           = link_to "沖縄", prefectures_okinawas_path
 
-    %form.leftContents__form
-      .leftContents__form__box
-        %input{type: "text", placeholder: "地名を入力してください", class: "text"}
-        %input{type: "submit", value: "検索", class: "btn"}
+    .placeName
+      %form.placeName__search
+        .placeName__search__box
+          %input{type: "text", placeholder: "地名を入力", class: "text"}
+          %input{type: "submit", value: "検索", class: "btn"}
+
+    .userNickname
+      %form.userNickname__search
+        .userNickname__search__box
+          %input{type: "text", placeholder: "ユーザー名を入力", class: "text"}
+          %input{type: "submit", value: "検索", class: "btn"}
