--- a/app/views/messages/_mainLeft.html.haml
+++ b/app/views/messages/_mainLeft.html.haml
@@ -24,7 +24,7 @@
     .placeName
       %form.placeName__search
         .placeName__search__box
-          %input{type: "text", placeholder: "地名を入力", class: "text"}
+          %input{type: "text", placeholder: "場所を入力", class: "text"}
           %input{type: "submit", value: "検索", class: "btn"}
 
     .userNickname
