--- a/app/views/messages/_header.html.haml
+++ b/app/views/messages/_header.html.haml
@@ -14,8 +14,8 @@
       .userNickname
       %ul.userFormBtn
         %li
-          = link_to "ログイン", new_user_session_path
-          = link_to "新規登録", new_user_registration_path
+          -# = link_to "ログイン", new_user_session_path
+          -# = link_to "新規登録", new_user_registration_path
 
 
 
