画像の表示方法の変更

--- a/app/assets/stylesheets/modules/_mainLeft.scss
+++ b/app/assets/stylesheets/modules/_mainLeft.scss
@@ -17,9 +17,7 @@
       align-items: center;
 
       .prefectures{
-        background-color: rgb(151, 236, 255);
-        background-image: url('image/japanMap.png');
-        background-size: cover;
+        background-color: rgb(151, 236, 255);        background-size: cover;
         height: 35vw;
         width: 35vw;
         position: relative;
