--- a/app/views/messages/_mainLeft.html.haml
+++ b/app/views/messages/_mainLeft.html.haml
@@ -2,6 +2,7 @@
   .leftContents
     .prefecturesBox
       .prefectures
+        = image_tag("japanMap.png", class:"prefectures")
         .hokkaidos
           = link_to "北海道", prefectures_hokkaidos_path
         .tohokus
