--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -5,7 +5,7 @@
     - @messages.each do |message|
       .messageBox
         .messageBox__user
-          .messageBox__user__icon
+          = image_tag("user.png", class: "messageBox__user__icon")
         .messageBox__contents
           .messageBox__contents__userNickname
             = current_user.nickname
