--- a/app/assets/stylesheets/_users.scss
+++ b/app/assets/stylesheets/_users.scss
@@ -38,10 +38,19 @@
         margin-left: 10px;
         font-size: 16px;
 
-        &__userNickname{
-          margin-bottom: 5px;
-        }
+        &__topBox{
+          display: flex;
+          justify-content: space-between;
+          &__userNickname{
+            font-size: 16px;
+          }
+          &__commandSelect{
+            background-color: red;
+            height: 20px;
+            width: 20px;
+          }
 
+        }
         &__image{
           margin: 10px auto;
           display: flex;
