--- a/app/views/messages/_header.html.haml
+++ b/app/views/messages/_header.html.haml
@@ -16,6 +16,12 @@
         %li
           = link_to "ログイン", new_user_session_path
           = link_to "新規登録", new_user_registration_path
+.headerSecret
+.notice
+  %p.notice
+    = notice
+  %p.alert
+    = alert
 
 
 
