--- a/app/assets/stylesheets/_users.scss
+++ b/app/assets/stylesheets/_users.scss
@@ -50,9 +50,30 @@
             font-size: 16px;
           }
           &__commandSelect{
-            background-color: red;
             height: 20px;
             width: 20px;
+            position: relative;
+
+            .messageFormBtn{
+              position: absolute;
+              top: 20px;
+              right: 0;
+              &__list{
+
+                display: flex;
+                flex-direction: column;
+                font-size: 16px;
+
+                .listContent{
+                  text-align: center;
+                  background-color: rgb(255, 255, 255);
+                  border: solid 1px rgb(231, 231, 231);
+                  width: 100px;
+                  padding: 5px 0;
+                  
+                }
+              }
+            }
           }
 
         }
