--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -20,7 +20,7 @@
               - else
                 %ul.messageFormBtn
                   %li
-                    = link_to("まだ未定", "")
+                    = link_to("未定", "")
 
               
           - if message.image?
