--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -12,7 +12,7 @@
               = current_user.nickname
             .messageBox__contents__topBox__commandSelect.pulldownSelect
               = image_tag("pulldown.png", class: "messageBox__contents__topBox__commandSelect")
-              - if user_signed_in?
+              - if user_signed_in? && current_user.id == message.user_id
                 %ul.messageFormBtn
                   %li.messageFormBtn__list
                     = link_to("削　除", message_path(message.id), method: :delete, class: "listContent")
