--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -12,15 +12,15 @@
               = current_user.nickname
             .messageBox__contents__topBox__commandSelect.pulldownSelect
               = image_tag("pulldown.png", class: "messageBox__contents__topBox__commandSelect")
-              - if user_signed_in? && current_user.id == message.user_id
-                %ul.messageFormBtn
-                  %li.messageFormBtn__list
-                    = link_to("削　除", message_path(message.id), method: :delete, class: "listContent")
-                    = link_to("編　集", "", class: "listContent")
-              - else
-                %ul.messageFormBtn
-                  %li
-                    = link_to("未定", "")
+              -# - if user_signed_in? && current_user.id == message.user_id
+              -#   %ul.messageFormBtn
+              -#     %li.messageFormBtn__list
+              -#       = link_to("削　除", message_path(message.id), method: :delete, class: "listContent")
+              -#       = link_to("編　集", "", class: "listContent")
+              -# - else
+              -#   %ul.messageFormBtn
+              -#     %li
+              -#       = link_to("未定", "")
 
               
           - if message.image?
