--- a/app/views/prefectures/hokkaidos/index.html.haml
+++ b/app/views/prefectures/hokkaidos/index.html.haml
@@ -1,7 +1,5 @@
 = render "./messages/header"
-= render "./layouts/prefecture"
--# .hokkaido
--#   %a(href="#")
--#     .hokkaidoBtn
--#       %textarea
--#       %input(type="submit" value="送信")
+= render "./prefectures/prefecture"
+.hokkaido
+  - @messages.each do |message|
+    = render "./modules/messageAllBox", message: message
