投稿削除機能の修正

--- a/app/views/prefectures/hokkaidos/index.html.haml
+++ b/app/views/prefectures/hokkaidos/index.html.haml
@@ -1,5 +1,4 @@
 = render "./messages/header"
-= render "./prefectures/prefecture"
 .hokkaido
   - @messages.each do |message|
-    = render "./modules/messageAllBox", message: message
+    = render "./modules/messageBox", message: message
