大幅な修正の実行
#What
　READMEに記載してある通りのコントローラー、モデル、テーブル名に修正した。

#Why
　READMEとアプリケーションを統一するため。

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,6 @@
 @import "config/variable";
 @import "font-awesome-sprockets";
 @import "font-awesome";
-@import "messages";
+@import "posts";
 @import "users";
 @import "prefectures";
