--- a/app/assets/stylesheets/modules/prefectures/_hokkaido.scss
+++ b/app/assets/stylesheets/modules/prefectures/_hokkaido.scss
@@ -1,7 +1,7 @@
 .hokkaido{
   width: 100%;
 
-  .messageBox{
+  .postBox{
     width: 98%;
     margin: 5px auto;
     padding: 10px;
@@ -38,7 +38,7 @@
           width: 20px;
           position: relative;
 
-          .messageFormBtn{
+          .postFormBtn{
             position: absolute;
             top: 20px;
             right: 0;
