--- a/app/views/posts/_header.html.haml
+++ b/app/views/posts/_header.html.haml
@@ -1,6 +1,6 @@
 .header
   .siteName
-    %a(href="/messages#index")
+    %a(href="/posts#index")
       Travel-memo
   .userBox
     - if user_signed_in?
