--- a/app/assets/stylesheets/_users.scss
+++ b/app/assets/stylesheets/_users.scss
@@ -17,7 +17,7 @@
     margin: 0 20vw 0 25vw;
 
 
-    .messageBox{
+    .postBox{
       width: 98%;
       margin: 5px auto;
       padding: 10px;
@@ -54,7 +54,7 @@
             width: 20px;
             position: relative;
 
-            .messageFormBtn{
+            .postFormBtn{
               position: absolute;
               top: 20px;
               right: 0;
