--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,7 +7,7 @@
     = csp_meta_tag
     = stylesheet_link_tag    'application', media: 'all'
     = javascript_include_tag 'application'
-    %script{async: "", defer: "defer", src: "https://maps.googleapis.com/maps/api/js?key=AIzaSyAexbzXCf_QA1o4a6st4f1mM7dpqWJipIA&callback=initMap"}
+    %script{async: "", defer: "defer", src: "https://maps.googleapis.com/maps/api/js?key=#{Rails.application.credentials.GOOGLE[:API_KEY]}&callback=initMap"}
   %body
   
     = yield
