--- a/app/assets/stylesheets/modules/posts/_mainLeft.scss
+++ b/app/assets/stylesheets/modules/posts/_mainLeft.scss
@@ -77,16 +77,18 @@
     .placeName{
       &__search{
         background-color: rgb(255, 255, 255);
-        height: 30px;
-        line-height: 30px;
+        width: 40vw;
         float: right;
         margin-top: 10px;
+        padding: 5px 10px;
         border: solid 1px rgb(180, 180, 180);
-        // box-shadow: 3px 3px 3px 3px rgba($color: #5a5a5a, $alpha: 1.0);
 
-        &__box{
-          padding: 0 10px;
+        &__textbox{
+          width: 30vw;
 
+        }
+        &__btn{
+          float: right;
         }
       }
     }
@@ -100,6 +102,7 @@
         border: solid 1px rgb(180, 180, 180);
 
         &__box{
+          
           padding: 0 10px;
 
         }
