Revert "Merge pull request #55 from kamui58/READMEの修正"
This reverts commit c2acd05f2d1b3c99ec872196240457fdaab112dd, reversing
changes made to bdd988bfa92dd28ad0a320844e6149fc39571d7e.

--- a/app/views/posts/_mainRight.html.haml
+++ b/app/views/posts/_mainRight.html.haml
@@ -18,3 +18,6 @@
         %i.fas.fa-image
         = f.file_field :image, class: "formBox__form__image--icon"
       = f.submit "投稿する", class: "formBox__form__btn"
+
+%script
+  
