--- a/app/assets/stylesheets/modules/posts/_mainRight.scss
+++ b/app/assets/stylesheets/modules/posts/_mainRight.scss
@@ -32,6 +32,7 @@
         font-size: 12px;
         width: 10%;
         float: right;
+        text-align: center;
         border: solid 1px black;
         line-height: 20px;
         cursor: pointer;
