--- a/app/views/posts/_mainLeft.html.haml
+++ b/app/views/posts/_mainLeft.html.haml
@@ -1,6 +1,6 @@
 .leftBox
   .leftContents
-    .prefecturesBox
+    .prefecturesBox#map
       .prefectures
         = image_tag("japanMap.png", class:"prefectures")
         .hokkaidos
