--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,25 +1,22 @@
-%h2 新規登録
-= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = render "devise/shared/error_messages", resource: resource
-  .field
-    = f.label :"ニックネーム"
-    %br/
-    = f.text_field :nickname, autocomplete: "nickname"
-  .field
-    = f.label :"メールアドレス"
-    %br/
-    = f.email_field :email, autofocus: true, autocomplete: "email"
-  .field
-    = f.label :"パスワード"
-    - if @minimum_password_length
-      %em
-        (#{@minimum_password_length} 文字以上)
-    %br/
-    = f.password_field :password, autocomplete: "new-password"
-  .field
-    = f.label :"確認用パスワード"
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "new-password"
-  .actions
-    = f.submit "新規登録"
-= render "devise/shared/links"
+.registrationBox
+  .title
+    アカウント登録
+  = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+    .registrationBox__nickname
+      = f.label :"ニックネーム", class: "registrationBox__nickname__label"
+      %br/
+      = f.text_field :nickname, autocomplete: "registrationBox", class: "registrationBox__nickname__text"
+    .registrationBox__email
+      = f.label :"メールアドレス", class: "registrationBox__email__label"
+      %br/
+      = f.email_field :email, autofocus: true, autocomplete: "email", class: "registrationBox__email__text"
+    .registrationBox__password
+      = f.label :"パスワード", class: "registrationBox__password__label"
+      %br/
+      = f.password_field :password, autocomplete: "new-passwod", placeholder: "6文字以上", class: "registrationBox__password__text"
+    .registrationBox__passwordConfirmation
+      = f.label :"確認用パスワード", class: "passwordConfirmation__label"
+      %br/
+      = f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "同じパスワードを入力", class: "registrationBox__passwordConfirmation__text"
+    .registrationBox__submit
+      = f.submit "登　　録", class: "registrationBox__submit__btn"
