投稿がないページの表示を追加
#What
　リンク、検索で該当する投稿がない場合の表示を追加した

#Why
　該当する投稿があるかないかを判断できるようにするため

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -2,9 +2,6 @@
 .userContentsBox
   .userBoxLeft
   .userBoxCenter
-    - @posts.each do |post|
-      = render "./modules/postBox", post: post
-
-
+    = render "./modules/postBox", posts: @posts
   .userBoxRight
 
