--- a/app/views/posts/search.html.haml
+++ b/app/views/posts/search.html.haml
@@ -1,4 +1,3 @@
 = render "./posts/header"
 .search
-  - @posts.each do |post|
-    = render "./modules/postBox", post: post
+  = render "./modules/postBox", posts: @posts
