--- a/app/views/prefectures/shikokus/index.html.haml
+++ b/app/views/prefectures/shikokus/index.html.haml
@@ -1,4 +1,3 @@
 = render "./posts/header"
 .prefecture
-  - @posts.each do |post|
-    = render "./modules/postBox", post: post
+  = render "./modules/postBox", posts: @posts
