--- a/app/assets/stylesheets/modules/posts/_mainLeft.scss
+++ b/app/assets/stylesheets/modules/posts/_mainLeft.scss
@@ -88,6 +88,12 @@
           width: 30vw;
         }
         &__btn{
+          background-color: rgb(255, 255, 255);
+          font-size: 12px;
+          height: 20px;
+          line-height: 17px;
+          border: solid 1px black;
+          border-radius: 2px;
           float: right;
         }
       }
