--- a/app/assets/stylesheets/modules/posts/_mainRight.scss
+++ b/app/assets/stylesheets/modules/posts/_mainRight.scss
@@ -42,7 +42,8 @@
         float: right;
         text-align: center;
         border: solid 1px black;
-        line-height: 20px;
+        border-radius: 2px;
+        line-height: 18px;
         cursor: pointer;
       }
 
@@ -85,6 +86,12 @@
       }
 
       &__btn{
+        background-color: rgb(255, 255, 255);
+        font-size: 12px;
+        height: 20px;
+        line-height: 17px;
+        border: solid 1px black;
+        border-radius: 2px;
         float: right;
         margin-right: 10%;
         cursor: pointer;
